samples/_failures_safe/1761501041_d7e0b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0af1af81.c: In function ‘main’:
./samples/SAFE/__tmp_0af1af81.c:151: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_0af1af81.c:150:5: error: expected declaration or statement at end of input
  150 |     if
      |     ^~
